<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_baseline_tag_faces_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        tools:text="@string/prompt_activities_main"
        android:id="@+id/activities_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:layout_marginTop="48dp"
        android:id="@+id/action_setting_new_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_setting_new_activity"
        android:theme="@style/ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/action_ongoing_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_ongoing_activities"
        android:theme="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="@+id/action_setting_new_activity"
        app:layout_constraintTop_toBottomOf="@+id/action_setting_new_activity" />

    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/action_finished_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_finished_activities"
        android:theme="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="@+id/action_ongoing_activities"
        app:layout_constraintTop_toBottomOf="@+id/action_ongoing_activities" />


</androidx.constraintlayout.widget.ConstraintLayout>