<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_finished_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_finished_activities"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finished_recyclerView"
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/item_finished_activity" />

        <TextView
            android:id="@+id/title_unfinished_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_unfinished_activities"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/unfinished_recyclerView"
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/item_finished_activity" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/mPieChart"
            android:minHeight="300dp"
            android:layout_margin="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/prompt_no_data"
            android:text="@string/prompt_no_data"
            android:layout_margin="48dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>