<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    tools:context=".fragment.OngoingOneTimeActivityFragment">

    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:textColor="#555555"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="activity name" />

    <TextView
        android:visibility="gone"
        android:id="@+id/item_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/item_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/action_finished" />


    <Button
        android:id="@+id/action_reset"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/action_reset"
        android:textSize="14sp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_title" />


    <Button
        android:id="@+id/action_unfinished"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/action_unfinished"
        android:textSize="14sp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintEnd_toStartOf="@+id/action_reset"
        app:layout_constraintTop_toBottomOf="@+id/item_title" />

    <Button
        android:id="@+id/action_finished"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/action_finished"
        android:textSize="14sp"
        android:theme="@style/ButtonStyle"
        app:layout_constraintEnd_toStartOf="@+id/action_unfinished"
        app:layout_constraintTop_toBottomOf="@+id/item_title" />

</androidx.constraintlayout.widget.ConstraintLayout>