<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:fillViewport="true"
    tools:context=".activity.NewOneTimeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/prompt_activity_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/prompt_activity_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activity_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_primary_5"
            android:hint="@string/prompt_activity_name"
            android:inputType="text"
            android:padding="12dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@+id/prompt_activity_name"
            app:layout_constraintStart_toStartOf="@+id/prompt_activity_name"
            app:layout_constraintTop_toBottomOf="@+id/prompt_activity_name" />

        <TextView
            android:id="@+id/prompt_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/prompt_start_time"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_name" />

        <EditText
            android:id="@+id/start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_primary_5"
            android:focusable="false"
            android:hint="@string/prompt_start_time"
            android:padding="12dp"
            android:theme="@style/Widget.AppCompat.EditText"
            app:layout_constraintEnd_toEndOf="@+id/prompt_start_time"
            app:layout_constraintStart_toStartOf="@+id/prompt_start_time"
            app:layout_constraintTop_toBottomOf="@+id/prompt_start_time" />

        <TextView
            android:id="@+id/prompt_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/prompt_location"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_time" />

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_primary_5"
            android:hint="@string/prompt_location"
            android:inputType="text"
            android:padding="12dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@+id/prompt_location"
            app:layout_constraintStart_toStartOf="@+id/prompt_location"
            app:layout_constraintTop_toBottomOf="@+id/prompt_location" />

        <TextView
            android:id="@+id/prompt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/prompt_description"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_primary_5"
            android:gravity="top"
            android:hint="@string/prompt_description"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="12dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@+id/prompt_description"
            app:layout_constraintStart_toStartOf="@+id/prompt_description"
            app:layout_constraintTop_toBottomOf="@+id/prompt_description" />

        <Button
            android:id="@+id/action_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:text="@string/action_done"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>